--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 /.venv/
-/ml_project/
 /online_inference/.idea/
 /online_inference/.venv/
 /online_inference/.pytest_cache/
 /online_inference/__pycache__/
 /.pytest_cache
 /.idea
+/airflow_ml_dags/.idea/
+/airflow_ml_dags/dags/__pycache__/
+/ml_project/.idea/
+/.idea/workspace.xml
